# vis_tool2

./: .gitignore  README.md  pyproject.toml  run_tool.sh
backend/: requirements.txt
backend/src/: configure_env.py  log_utils.py  module.py  runner_utils.py  server.py  test.py  timeline.py  websocket_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: IUEdge.tsx  IUFlowDot.tsx  Module.tsx  ModuleFlowNode.tsx  ModuleSelectionContent.tsx  NavBar.tsx  Network.tsx  NetworkFlowNode.tsx  RecordButton.tsx  Timeline.tsx  TimelineFlowNode.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: SocketContext.tsx
frontend/src/errors/: ApiError.ts
frontend/src/hooks/: useModuleData.ts  useNetworkData.ts  useTimelineData.ts
frontend/src/pages/: ModuleSelectionPage.tsx  NetworkPage.tsx  TimelinePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: allTypes.ts  api.ts  general.ts  iu.ts  modules.ts  navbar.ts  network.ts  socket.ts  timeline.ts
frontend/src/utils/: TimelineUtils.ts
