[project]
name = "vis-tool2"
version = "0.1.0"
description = "Visual Tool for Retico"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.0",
    "google-cloud-speech>=2.35.0",
    "google-cloud-texttospeech>=2.34.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pyzmq>=27.1.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "webrtcvad>=2.0.10",
]
